# PhotoShare

./: README.md  alembic.ini  env.example  main.py  pyproject.toml  requirements.txt  test.py
migrations/: env.py
migrations/versions/: 1896ba03a779_init.py  211c240e3c80_init.py  2433881b9f1c_init.py  468267ddbffb_init2.py  81dea9d46fd9_init.py  a5dcda1a3303_init.py  ad36b2005ba8_initial.py  b1a793f5679b_init.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  2696  2840  2841  pg_internal.init
postgres-data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  16388  16391  16584  16585  16589  16591  16601  16602  16607  16608  16610  16612  16614  16615  16620  16621  16628  16629  16633  16645  16650  16662  2224  24627  24630  24632  24637  24639  24649  24650  24655  24656  24658  24660  24662  (+43 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
src/conf/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: comments.py  photos.py  ratings.py  tags.py  users.py
src/routes/: auth_routes.py  comment_routes.py  photo_routes.py  tags.py  tags_routes.py  user_routes.py
src/schemas/: comment_schemas.py  photo_schemas.py  user_schemas.py
src/services/: auth_service.py  cloudinary_service.py
src/templates/: index.html
src/utils/: messages.py
