[tool.poetry]
name = "photoshare"
version = "0.1.0"
description = "GoIT School WEB course team project of Sharing Photo FastAPI application"
authors = ["Roman <romankuspys777@gmail.com>, Ruslan Logush <phenixruslan@gmail.com>, Maryna Kondratiuk <kondratyukmv@gmail.com>, Oleksandr Dyshliuk <dishalex@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.15.0"
pydantic = "^1.9.0"
gravatar = "^0.6.0"
pyjwt = "^2.3.0"
fastapi-limiter = "^0.4.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
fastapi = "^0.70.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.1"
alembic = "^1.7.3"
redis = "^3.7.0"
passlib = "^1.7.4"
fastapi-mail = "^0.13.0"
libgravatar = "^1.0.4"
cloudinary = "^1.26.1"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.109.0"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.25"
asyncpg = "^0.29.0"
uvicorn = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
